# sql2mermaid-cli

./: README.md  pyproject.toml  tox.ini
sql2mermaid/: __main__.py
