[project]
name = "sql2mermaid"
version = "2.2.1"
description = "Convert SQL table dependencies to mermaid.js"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "nkato", email = "naokato.aq@gmail.com"}]
dependencies = [
    "sqlparse>=0.4.3,<0.5.0",
    "typing-extensions>=4.0.0,<5.0.0",
]

[project.urls]
Repository = "https://github.com/nkato/sql2mermaid"

[project.scripts]
sql2mermaid = "sql2mermaid.__main__:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "ty>=0.0.1a25",
    {include-group = "commit"},
]
commit = [
    "commitizen>=4.9.1",
    "pre-commit>=4.3.0",
]

[tool.uv.build-backend]
module-name = "sql2mermaid"
module-root = "."

[tool.black]
line-length = 128

[tool.flake8]
extend-ignore = "E203,E501,E701"
max-line-length = 128
max-complexity = 18
exclude = ".venv,.tox,.mypy_cache,.git,__pycache__"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
no_site_packages = true
namespace_packages = true
explicit_package_bases = true

[tool.isort]
profile = "black"
line_length = 128
